Этап 2. ИТОГОВЫЙ EWM с готовыми сервисами: ОСНОВНЫМ и СТАТИСТИКОЙ